@@ -307,7 +307,7 @@ Sebastian Riedel, C<sri@oook.de>
 
 =head1 THANK YOU
 
-Andy Grundman, Andrew Ford, Andrew Ruthven, Christian Hansen,
+Andy Grundman, Andrew Ford, Andrew Ruthven, Autrijus Tang, Christian Hansen,
 Christopher Hicks, Dan Sully, Danijel Milicevic, David Naughton,
 Gary Ashton Jones, Jesse Sheidlower, Johan Lindstrom, Marcus Ramberg,
 Tatsuhiko Miyagawa and all the others who've helped.
