@@ -2,6 +2,7 @@ package Catalyst::Base;
 
 use strict;
 use base qw/Class::Data::Inheritable Class::Accessor::Fast/;
+use Catalyst::Utils;
 use NEXT;
 
 __PACKAGE__->mk_classdata($_) for qw/_attrcache _cache _config/;
@@ -69,7 +70,12 @@ component loader with config() support and a process() method placeholder.
 
 sub new {
     my ( $self, $c ) = @_;
-    return $self->NEXT::new( $self->config );
+    my $class     = ref $self || $self;
+    my $appname   = Catalyst::Utils::class2appclass($class);
+    my $suffix    = Catalyst::Utils::class2classsuffix($class);
+    my $appconfig = $appname->config->{$suffix} || {};
+    my $config    = { %{ $self->config }, %{$appconfig} };
+    return $self->NEXT::new($config);
 }
 
 # remember to leave blank lines between the consecutive =item's
