@@ -10,6 +10,7 @@ This file documents the revision history for Perl extension Catalyst.
         - Read AUTHOR from passwd or $ENV{AUTHOR} when 
           generating code.
         - extended attribute handling
+        - added global config for components
 
 5.00  Fri Apr 15 18:00:00 2005
         - new core to support inheritance trees
